--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^15.5.4",
     "react-syntax-highlighter": "^5.7.0",
     "request": "^2.81.0",
+    "typed.js": "^2.0.6",
     "url-loader": "^0.6.2",
     "webpack": "^2.5.1"
   },
